# drift-benchmark

./: .env.example  .env.sample  .gitignore  .gitmodules  ListMethods.toml  README.md  REQUIREMENTS.md  REQUIREMENTS_Advanced.md  cspell.json  example.py  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: gen-code.instructions.md  gen-tests.instructions.md
.github/prompts/: gen-tests.prompt.md  refactor-tests.prompt.md
components/: .gitignore  alibi_detect_adapter.py  alibidetect_detectors.py  distance_example.py  evidently_adapter.py  evidently_detectors.py  example_adapter.py  river_detectors.py  simple_detectors.py  statistical_example.py
configurations/: README.md  benchmark_config.toml  evidently.toml  example.toml
configurations/by_data_type/: custom_comprehensive.toml  synthetic_comprehensive.toml  uci_comprehensive.toml
configurations/by_execution_mode/: batch_comprehensive.toml  online_comprehensive.toml
configurations/by_method_type/: distance_based_comprehensive.toml  statistical_tests_comprehensive.toml  streaming_comprehensive.toml
configurations/comparative_studies/: batch_vs_streaming.toml  library_comparison.toml  ultimate_comprehensive.toml
datasets/: .gitignore
docs/: ADAPTER-API.md  ADAPTER_API.md  ALIBIDETECT-DETECTORS.md  BENCHMARK-API.md  BENCHMARK_API.md  EVIDENTLY-DETECTORS.md  REQUIREMENTS-BASIC.md  REQUIREMENTS-FULL.md  SETTINGS.md  adapter_api.md  benchmark_api.md  configurations.md  scenarios.md
docs/components/: _adapter_api.md  alibi-detect.md  evidently.md  river.md
examples/: distance_example.py  statistical_example.py
figures/: README.md  __init__.py  plots.py
notebooks/: data-examples.ipynb  scenarios-px.ipynb
scenarios/: README.md  concept_drift_example.toml  covariate_drift_example.toml  simple_csv_example.toml  sklearn_blobs_drift.toml  sklearn_breast_cancer_drift.toml  sklearn_diabetes_drift.toml  sklearn_iris_concept_drift.toml  sklearn_synthetic_classification_drift.toml  sklearn_synthetic_regression_drift.toml  sklearn_wine_drift.toml
scripts/: README.md  run_benchmarks_analysis.py
tests/: conftest.py  test_adapters.py  test_benchmark.py  test_data_flow.py  test_datasets.py  test_detectors.py  test_enhanced_realworld_integration.py  test_exceptions.py  test_generators.py  test_initialization.py  test_literals.py  test_metrics.py  test_results.py  test_scenarios.py  test_settings.py  test_utilities.py
(+223 files in other folders)
